files/jenkins-Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 4m
    openshift.io/generated-by: OpenShiftNewApp
    template.openshift.io/expose-uri: http://{.spec.host}{.spec.path}
  creationTimestamp: null
  labels:
    app: jenkins-persistent
    template: jenkins-persistent-template
  name: jenkins
spec:
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jenkins
    weight: null
status: {}
